--- a/demo.html
+++ b/demo.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" type="text/css" href="demo/css/global.css"/>
 		<link rel="stylesheet" type="text/css" href="demo/css/demo.css"/>
 		<link rel="stylesheet" type="text/css" href="elements/actionbar/actionbar.css"/>
-		<link rel="stylesheet" type="text/css" href="elements/panel/panel.css"/>
+		<link rel="stylesheet" type="text/css" href="isElements/panel/panel.css"/>
 		<link rel="stylesheet" type="text/css" href="elements/tabbox/tabbox.css"/>
 		<link rel="stylesheet" type="text/css" href="elements/accordion/accordion.css"/>
 		<link rel="stylesheet" type="text/css" href="elements/slidebox/slidebox.css"/>
@@ -27,7 +27,7 @@
 		
 		<script type="text/javascript" src="x-tag.js"></script>
 		<script type="text/javascript" src="elements/actionbar/actionbar.js"></script>
-		<script type="text/javascript" src="elements/panel/panel.js"></script>
+		<script type="text/javascript" src="isElements/panel/panel.js"></script>
 		<script type="text/javascript" src="elements/tabbox/tabbox.js"></script>
 		<script type="text/javascript" src="elements/accordion/accordion.js"></script>
 		<script type="text/javascript" src="elements/slidebox/slidebox.js"></script>
@@ -75,12 +75,12 @@
 				<button data-action-type="switchSrc">Switch <code>src</code></button>
 			</nav>
 			
-			<x-panel id="panel_demo" rel="demo/html/panel-content.html"></x-panel>
+			<div id="panel_demo" is="x-panel" rel="demo/html/panel-content.html"></div>
 			
 <h4>The Markup:</h4>		
 <pre>
 <code>
-<x-panel src="demo/html/panel-content.html"></x-panel>
+<div id="panel_demo" is="x-panel" rel="demo/html/panel-content.html"></div>
 </code>
 </pre>
 		</dd>
